# order-book-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: orders-1.csv
examples/: simulation.py
notebook/: orders.ipynb  scratchpad.ipynb
scripts/: listen_trades.py  run.sh  simulate.sh
src/order_book_simulator/: api.py  main.py
src/order_book_simulator/analysis/: __init__.py  metrics.py
src/order_book_simulator/config/: __init__.py  account.py  order_request.py  trade.py
src/order_book_simulator/core/: __init__.py  order_book.py  order_matching_engine.py  trade_history.py  trader_account.py
src/order_book_simulator/database/: __init__.py  models.py  session.py
src/order_book_simulator/util/: __init__.py  misc.py
src/order_book_simulator/websocket/: __init__.py  connection_manager.py
