[project]
name = "order-book-simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "whanyu1212",email = "whanyu1212@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
